# doc_loader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EVALUATION_REPORT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PUBLICATION_STATUS.md  README.md  README_PYPI.md  evaluate_quality.py  pyproject.toml  python_demo.py
.github/workflows/: ci.yml  docs.yml
docs/: README.md  _config.yml  api.md  configuration.md  examples.md  index.md  python_bindings.md  python_usage.md  quick_start.md
samples/: test_sample.csv  test_sample.json  test_sample.pdf.txt  test_sample.txt
scripts/: README.md  SCRIPT_COMPLETED.md  cleanup_dev.sh  publish.sh  setup_github.sh  setup_tokens.sh
src/: cli.rs  error.rs  extractor.rs  lib.rs  main.rs  metadata.rs  output.rs  python.rs  splitter.rs
src/core/: mod.rs
src/processors/: csv.rs  docx.rs  json.rs  mod.rs  pdf.rs  txt.rs
src/utils/: mod.rs
test_corpus/: books_dataset.csv  companies_performance.csv  corporate_report.txt  research_papers.json  sample_document.txt
test_results/: companies_output.json  corporate_output.json  plato_output.json  sample_document_output.json  sample_pdf_output.json  scientific_articles_output.json
testing/: CONFIG.md  README.md
testing/corpus/: book_catalog_database.csv  business_report_q4_2024.txt  company_performance_2024.csv  research_papers_collection.json  scientific_articles.json  technical_documentation.txt
testing/reports/: TEST_SUITE_REPORT.md
testing/tools/: README.md  generate_test_corpus.py  run_test_suite.py
