[package]
name = "doc_loader"
version = "0.3.2"
edition = "2021"
authors = ["WillIsback <will@example.com>"]
description = "A comprehensive toolkit for extracting and processing documentation from multiple file formats (PDF, TXT, JSON, CSV, DOCX) with Python bindings"
keywords = ["document", "processing", "pdf", "text", "extraction"]
categories = ["text-processing", "command-line-utilities", "api-bindings"]
license = "MIT"
repository = "https://github.com/WillIsback/doc_loader"
readme = "README.md"
homepage = "https://github.com/WillIsback/doc_loader"
documentation = "https://willisback.github.io/doc_loader/"
exclude = [
    "venv/",
    ".venv/",
    "temp_env/",
    "*_env/",
    "env/",
    ".env/",
    "target/",
    ".git/",
    "*.pyc",
    "__pycache__/",
    "demo_output/",
    ".pytest_cache/",
    "*.egg-info/",
    "dist/",
    "build/",
    ".DS_Store",
    "Thumbs.db",
    "*.tmp",
    "*.temp"
]

[[bin]]
name = "doc_loader"
path = "src/main.rs"

[[bin]]
name = "pdf_processor"
path = "src/bin/pdf_processor.rs"

[[bin]]
name = "txt_processor"
path = "src/bin/txt_processor.rs"

[[bin]]
name = "json_processor"
path = "src/bin/json_processor.rs"

[[bin]]
name = "csv_processor"
path = "src/bin/csv_processor.rs"

[[bin]]
name = "docx_processor"
path = "src/bin/docx_processor.rs"

[lib]
name = "doc_loader"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PDF processing
lopdf = "0.32"

# Text processing
encoding_rs = "0.8"

# JSON processing  
serde_json = "1.0"

# CSV processing
csv = "1.3"

# DOCX processing
docx-rs = "0.4"

# CLI framework
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

# JSON/Serialization
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Text processing utilities
regex = "1.10"
unicode-segmentation = "1.10"

# File I/O
tokio = { version = "1.0", features = ["full"], optional = true }
async-std = "1.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Progress bars
indicatif = "0.17"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = ["async", "tokio"]
async = ["tokio"]
python = ["pyo3"]

[dev-dependencies]
tempfile = "3.8"
